--- a/src/App.css
+++ b/src/App.css
@@ -14,22 +14,39 @@
 .GridContainer {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: 1fr 6fr;
   grid-column-gap: 15px;
   grid-row-gap: 0px;
 }
 
 .zettel,
 .rezepte {
+  padding: 1em;
   background-color: var(--darkwhite);
-  text-align: center;
+  text-align: left;
+}
+
+.zettel ul {
+  padding: 0;
+}
+
+.zettel ul li {
+  list-style: none;
+}
+
+.cookieCard {
+  width: 50%;
+  margin: 10px auto;
+  background-color: var(--darkbrown);
+  text-align: left;
+  padding: 0.5em;
+  border-radius: 10px;
+  color: var(--darkwhite);
+  /* border: 2px solid var(--lightbrown); */
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .cookieName {
-  width: 50%;
-  padding: 0.5em;
-  margin: 1em auto;
-  background-color: var(--lightbrown);
+  margin: 1em;
   border-radius: 10px;
   cursor: pointer;
 }
